# quantlab-backend

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: router.py
app/api/routes/: assets.py  compare.py  correlation.py  drawdown.py  health.py  prices.py  returns.py  risk.py  volatility.py
app/core/: settings.py
app/domain/analytics/: correlation.py  drawdown.py  normalized_performance.py  returns.py  risk.py  volatility.py
app/schemas/: assets.py  compare.py  correlation.py  market_data.py  risk.py  series.py
app/scripts/: ingest.py  normalize_stooq.py
app/services/market_data/: assets_inventory.py  assets_summary.py  reader.py  repository.py
app/services/market_data/providers/: cryptodatadownload_provider.py
data/normalized/: BTCUSDT_1h.csv  EURUSD_1d.csv  QQQ_1d.csv  SPX_1d.csv  SPY_1d.csv  XAUUSD_1d.csv
data/raw/: ^spx_d.csv  eurusd_d.csv  qqq_us_d.csv  spy_us_d.csv  xauusd_d.csv
tests/: test_assets_api.py  test_assets_overview_api.py  test_correlation_api.py  test_drawdown_api.py  test_drawdown_math.py  test_health.py  test_ingest_normalize.py  test_normalized_performance_api.py  test_prices.py  test_returns_api.py  test_returns_math.py  test_risk_api.py  test_risk_math.py  test_volatility_api.py  test_volatility_math.py
tests/fixtures/: cryptodd_btcusdt_1h_sample.csv
